@@ -94,12 +94,13 @@ class GameObject(pygame.sprite.Sprite, object):
     def height(self):
         return self.rect.height
 
-    def draw(self, surface, x_scale, y_scale, x, y):
+    def draw(self, surface, position):   # , x_scale, y_scale, x, y):
         # TODO: May need to change image to current_image. Also go through and make sure using right image consistently
-        rect_scaled = pygame.Rect((x-self.rect.x*x_scale, y-self.rect.y*y_scale), (int(self.rect.width*x_scale),
-                                                                                   int(self.rect.height*y_scale)))
-        surface.blit(pygame.transform.scale(self.image, (int(self.image.get_width()*x_scale),
-                                                         int(self.image.get_height()*y_scale))), rect_scaled)
+        # rect_scaled = pygame.Rect((x-self.rect.x*x_scale, y-self.rect.y*y_scale), (int(self.rect.width*x_scale),
+        #                                                                            int(self.rect.height*y_scale)))
+        # surface.blit(pygame.transform.scale(self.image, (int(self.image.get_width()*x_scale),
+        #                                                  int(self.image.get_height()*y_scale))), rect_scaled
+        surface.blit(self.image, (position[0], position[1], self.image.get_width(), self.image.get_height()))
 
     # def scale(self, x_scale, y_scale):
     # TODO: Implement GameObject.scale()
